[Whitelist] Add authenticator to whitelist API group set correct headers
