# cmd/server/main.go
@@ -165,12 +165,14 @@ func (s *Server) SetupRouter() *gin.Engine {
 	activity.GET("/", authenticator, accountService.HandleGetRequest)
 
 	whitelist := v1.Group("/whitelist")
-	whitelist.POST("/", accountService.HandlePostRequest)
-	whitelist.GET("/name/:name", accountService.HandleGetRequest)
-	whitelist.GET("/email/:email", accountService.HandleGetRequest)
-	whitelist.GET("/phone/:phone", accountService.HandleGetRequest)
-	whitelist.GET("/", accountService.HandleGetRequest)
-	whitelist.DELETE("/:id", accountService.HandleDeleteRequest)
+	whitelist.POST("/email/generate", accountService.HandlePostRequest)
+	whitelist.POST("/email/verify", accountService.HandlePostRequest)
+	whitelist.POST("/", forwarder, accountService.HandlePostRequest)
+	whitelist.GET("/name/:name", authenticator, accountService.HandleGetRequest)
+	whitelist.GET("/email/:email", authenticator, accountService.HandleGetRequest)
+	whitelist.GET("/phone/:phone", authenticator, accountService.HandleGetRequest)
+	whitelist.GET("/", authenticator, accountService.HandleGetRequest)
+	whitelist.DELETE("/:id", authenticator, accountService.HandleDeleteRequest)
 
 	referral := v1.Group("/referral")
 	referral.GET("/create", authenticator, accountService.HandleGetRequest)
