# docs/swagger.json
@@ -2034,6 +2034,11 @@
         },
         "/whitelist": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "List all whitelist user records",
                 "consumes": [
                     "application/json"
@@ -2046,6 +2051,15 @@
                 ],
                 "summary": "List all whitelist user records",
                 "operationId": "list-records",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -2071,6 +2085,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a whitelist user record",
                 "consumes": [
                     "application/json"
@@ -2084,6 +2103,13 @@
                 "summary": "Create a whitelist user record",
                 "operationId": "create-whitelist-user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "RegistrationSession",
+                        "name": "RegistrationSession",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Record Data",
                         "name": "record",
@@ -2110,8 +2136,95 @@
                 }
             }
         },
+        "/whitelist/email/generate": {
+            "post": {
+                "description": "Generate email verification passcode and send passcode to user email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "whitelist"
+                ],
+                "summary": "Generate email verification passcode",
+                "operationId": "whitelist-email-generate",
+                "parameters": [
+                    {
+                        "description": "Email",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.GenerateEmailPasscodeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Email verification was sent to user email",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/whitelist/email/verify": {
+            "post": {
+                "description": "Verify email passcode",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "whitelist"
+                ],
+                "summary": "Verify email passcode",
+                "operationId": "whitelist-email-verify",
+                "parameters": [
+                    {
+                        "description": "Verify information",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.VerifyEmailPasscodeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.RegistrationSessionResponse"
+                        }
+                    },
+                    "422": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/whitelist/email/{email}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get whitelist user records by email",
                 "consumes": [
                     "application/json"
@@ -2126,9 +2239,16 @@
                 "operationId": "get-record-by-email",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Whitelist User Record ID",
-                        "name": "id",
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email Address",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
@@ -2160,6 +2280,11 @@
         },
         "/whitelist/name/{name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get whitelist user records by name",
                 "consumes": [
                     "application/json"
@@ -2174,9 +2299,16 @@
                 "operationId": "get-record-by-name",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Whitelist User Record ID",
-                        "name": "id",
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Name",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
@@ -2208,6 +2340,11 @@
         },
         "/whitelist/phone/{phone}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get whitelist user records by phone",
                 "consumes": [
                     "application/json"
@@ -2220,6 +2357,22 @@
                 ],
                 "summary": "Get whitelist user records by phone",
                 "operationId": "get-record-by-phone",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Phone Number",
+                        "name": "phone",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -2247,6 +2400,11 @@
         },
         "/whitelist/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a whitelist user record",
                 "consumes": [
                     "application/json"
@@ -2259,11 +2417,27 @@
                 ],
                 "summary": "Delete a whitelist user record",
                 "operationId": "delete-whitelist-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Whitelist Record ID",
+                        "name": "ID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "Object"
+                            "$ref": "#/definitions/api.WhitelistUserInfo"
                         }
                     },
                     "400": {
